# lilygo-epd47-rs

./: Cargo.toml  README.md  build.rs  rustfmt.toml
.cargo/: config.toml
examples/: basic.rs  battery.rs  counter.rs  deepsleep.rs  grayscale.rs  hello-world.rs  screen-repair.rs  simple.rs
src/: battery.rs  display.rs  ed047tc1.rs  graphics.rs  lib.rs  rmt.rs  waveform.rs
