[package]
name = "lilygo_epd47"
version = "0.1.0"
authors = ["Frido Koch <info@fridokoch.de>"]
edition = "2021"
license = "GPL-3"

[dependencies]
esp-hal = { version = "0.18.0", features = ["esp32s3", "opsram-8m"] }
embedded-graphics-core = "0.4.0"
esp-alloc = "0.4.0"
# FIXME: still needed?
critical-section = "1.1.2"
esp-println = { version = "0.9.1", features = ["esp32s3", "log"] }

[dev-dependencies]
esp-backtrace = { version = "0.12.0", features = [
    "esp32s3",
    "exception-handler",
    "panic-handler",
    "println",
] }
u8g2-fonts = "0.4.0"
embedded-graphics = "0.8.1"
log = { version = "0.4.21" }




[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
