[package]
name = "lilygo-epd47"
description = "Simple driver for the LilyGo T5 4.7 inch E-Ink Display (HW-Version V2.3 / ESP32S3)"
version = "0.2.0"
authors = ["Frido Koch <info@fridokoch.de>"]
edition = "2021"
license = "GPL-3.0"
categories = ["embedded", "no-std"]
readme = "./README.md"
repository = "https://github.com/fridolin-koch/lilygo-epd47-rs"
keywords = ["epd", "lilygo", "esp-hal", "ED047TC1", "embedded-graphics"]

[dependencies]
esp-hal = { version = "0.19.0", features = ["esp32s3", "opsram-8m"] }
embedded-graphics-core = { version = "0.4.0", optional = true }
esp-alloc = "0.4.0"

[dev-dependencies]
esp-println = { version = "0.10.0", features = ["esp32s3", "log"] }
esp-backtrace = { version = "0.13.0", features = [
    "esp32s3",
    "exception-handler",
    "panic-handler",
    "println",
] }
u8g2-fonts = { version = "0.4.0", features = ["embedded_graphics_textstyle"] }
embedded-graphics = "0.8.1"
log = { version = "0.4.21" }

tinybmp = { version = "0.6.0" }
[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false

[features]
default = ["embedded-graphics"]

embedded-graphics = ["embedded-graphics-core"]
